smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/invalid-trait-textblock-key.smithy
// Parse error at line 6, column 11 near `: `: Expected: ')', but found ':'
namespace smithy.example

@externalDocumentation(
    """
    Foo""": "bar")
string MyString
